<resources>
    <string name="app_name">Uz Book</string>
    <string name="home">Home</string>
    <string name="podcasts">Aудио</string>
    <string name="profile">Профил</string>
    <string name="my_books">Favorites</string>
    <string name="screen_splash">Splash screen</string>
    <string name="screen_home">Home screen</string>
    <string name="screen_section">Section screen</string>
    <string name="screen_profile">Profile screen</string>
    <string name="screen_podcasts">Podcasts screen</string>
    <string name="app_description">Application for reading books and listening to their audio versions</string>
    <string name="purpose_of_app">Ўзини танимоқ истаган\nкўнгиллар учун…</string>
    <string name="register">Рўйхатдан ўтиш</string>
    <string name="phone_number">Телефон рақам</string>
    <string name="login">Кириш</string>
    <string name="start_from_here">Агар Uz Book дан аввал фойдаланмаган бўлсангиз\n<u>мана бундан бошланг</u></string>
    <string name="app_version_x">Версия %s</string>
    <string name="cancel">Бекор қилиш</string>
    <string name="create_page_in_rovi">Рови дан саҳифа очинг</string>
    <string name="username">Фойдаланувчи номи (Login)</string>
    <string name="last_name">Фамилия</string>
    <string name="first_name">Исм</string>
    <string name="email">Эмаил</string>
    <string name="password">Парол (Password)</string>
    <string name="accept_terms_and_conditions">Ровиталк дан сотиб олиш ва ишлатиш шартларига розиман</string>
    <string name="are_you_registered">Сиз аввал Рови дан\nрўйхатдан\nўтганмисиз?</string>
    <string name="enter">Кириш</string>
    <string name="video_instruction">Видео инструкция</string>
    <string name="verify_phone_number">Телефон рақамингизни тасдиқланг</string>
    <string name="enter_4_digit_code">Давом этиш учун биз сизнинг телефон рақамингизга юборган 4 хонали кодни киритинг</string>
    <string name="verify">Тасдиқлаш</string>
    <string name="resend_code"><![CDATA[<p>Код етиб бормадими? <span style="color:#70B17C;">Қайта жўнатиш</span></p>]]></string>
    <string name="assalamu_alaykum">Ассалому алайкум</string>
    <string name="books">Books</string>
    <string name="audio_books">Audiobooks</string>
    <string name="all_categories">All categories</string>
    <string name="view_book">Kitobni ko\'rish</string>
    <string name="rating">Reyting</string>
    <string name="page_count">Betlar soni</string>
    <string name="language">Til</string>
    <string name="audio">Audio</string>
    <string name="description">Tavsif</string>
    <string name="reviews">Baholar</string>
    <string name="which_section_are_you_interested_in">Қайси бўлим сиз учун қизиқарли?</string>
    <string name="you_can_choose">Танлашингиз мумкин…</string>
    <string name="buy_full">Тўлиқ қисмини сотиб олиш</string>
    <string name="more">Барчаси</string>
    <string name="x_minutes">%d дақиқа</string>
    <string name="x_count">%d дона</string>
    <string name="most_listened">Энг кўп эшитилган</string>
    <string name="new_to_rovi">Рови да янгимисиз?</string>
    <string name="learn_how_to_use">Қандай фойдаланиш керак?</string>
    <string name="category_empty">Бу бўлим ҳали тўлдирилмади</string>
    <string name="sub_category_empty">Бу бўлим ҳали тўлдирилмади</string>
    <string name="search">Қидирув</string>
    <string name="updating">Янгиланмоқда…</string>
    <string name="updated">Малумотлар янгиланди</string>
    <string name="search_hint">Қидиринг…</string>
    <string name="first_last_names">%s %s</string>
    <string name="edit_profile">Профилни таҳрирлаш</string>
    <string name="your_active_tariffs">Сизнинг актив тариф режаларингиз</string>
    <string name="last_listened">Охирги эшитганларингиз</string>
    <string name="start_date">Бошланган вақти</string>
    <string name="end_date">Охирги вақти</string>
    <string name="language_uz">Ўзбек</string>
    <string name="language_ru">Русский</string>
    <string name="language_en">English</string>
    <string name="choose_language">Тилни танланг</string>
    <string name="choose_language_want_to_use">Иловадан фойдаланмоқчи бўлган тилни танланг</string>
    <string name="set_language">Тилни қўллаш</string>
    <string-array name="months">
        <item>Январ</item>
        <item>Феврал</item>
        <item>Март</item>
        <item>Апрел</item>
        <item>Май</item>
        <item>Июн</item>
        <item>Июл</item>
        <item>Август</item>
        <item>Сентябр</item>
        <item>Октябр</item>
        <item>Ноябр</item>
        <item>Декабр</item>
    </string-array>
    <string name="months_x_x">%s %d, %d</string>
    <string name="favorites">Favorites</string>
    <string-array name="favorite_types">
        <item>Mening kitoblarim</item>
        <item>Audiokitoblar</item>
    </string-array>
    <string name="x_order">%d. </string>
    <string name="x_minute_seconds">%02d:%02d</string>
    <string name="mute">Фонсиз</string>
    <string name="ambient">+</string>
    <string name="vocal">-</string>
    <string name="free">Бепул</string>
    <string name="enable_permissions">Рухсатларни ёқиш</string>
    <string name="enable_call_state_permissions">Хизматдан самарали фойдаланиш ва дастур самарадорлигини ошириш мақсадида қўнғироқлар ҳолатини текширишга рухсат беринг</string>
    <string name="not_enable_permissions">Йўқ</string>
    <string name="enable">Рухсат бериш</string>
    <string name="settings">Созламалар</string>
    <string name="log_out">Дастурдан чиқиш</string>
    <string name="settings_item">Settings Item</string>
    <string name="settings_forward_icon">Settings forward icon</string>
    <string name="faq_settings">Саволларга тавсиялар</string>
    <string name="daily_notifications_settings">Кунлик эслатмалар</string>
    <string name="restore_purchase_setting">Харидни тиклаш</string>
    <string name="about_rovi_setting">Рови ҳақида</string>
    <string name="app_rating_setting">Дастур рейтинги</string>
    <string name="comment_your_thoughts_settings">Фикрингизни қолдиринг</string>
    <string name="law_instructions_settings">Ҳуқуқий маълумотлар</string>
    <string name="are_you_sure">Сизнинг фикрингиз қатъийми?</string>
    <string name="your_all_data_will_be_deleted">Дастурдан чиқиб кетсангиз, сиз юклаб олган барча мусиқалар дастур хотирасидан ўчиб кетади</string>
    <string name="yes_want_to_log_out">Ҳа</string>
    <string name="no_want_to_stay">Йўқ</string>
    <string name="feedback_title">Фикр-мулоҳазаларингиз билан бўлишинг</string>
    <string name="feedback_subject">RoviTalk учун фикр-мулоҳазалар</string>
    <string name="feedback_text">Фирк-мулоҳазаларингизни бу ерга ёзинг…\n\n\nМенда дастур версияси %s ва Android версияси %d</string>
    <string name="feedback_not_available">Телефонингизда e-mail дастури ўрнатилмаган</string>
    <string name="upload">Юклаш</string>
    <string name="save_data">Маълумотларни сақлаш</string>
    <string name="daily_reminders">Кунлик эслатмалар</string>
    <string name="time">Вақти</string>
    <string name="add_reminder">Эслама қўшиш</string>
    <string name="add_daily_reminders_for_yourself">Ўзингиз учун кунлик эслатмалар қўшинг</string>
    <string name="reminder_title">Сарлавҳа</string>
    <string name="reminder_text">Эслатма матни</string>
    <string name="remind_time">Эслатма вақти</string>
    <string name="choose_remind_time">Эслатма вақтини белгиланг</string>
    <string name="x_time">%s-%s</string>
    <string name="remind">Эслат</string>
    <string name="tariffs">Тариф режалари</string>
    <string name="x_day">%d кун</string>
    <string name="one_month">1 ой</string>
    <string name="three_month">3 ой</string>
    <string name="six_month">6 ой</string>
    <string name="tariff_chosen">Тариф танланди</string>
    <string name="x_sum">%d\nсўм</string>
    <string name="x_sum_str">%s сўм</string>
    <string name="total_cost">Умумий ҳисоб</string>
    <string name="privacy_rules">Махфийлик қоидалари</string>
    <string name="usage_rules">Фойдаланиш қоидалари</string>
    <string name="decline_responsibility">Жавобгарликни рад этиш</string>
    <string name="payment_systems">Тўлов тизимлари</string>
    <string name="payme">Payme</string>
    <string name="click">Click</string>
    <string name="robo_kassa">Robo Kassa</string>
    <string name="paypal">PayPal</string>
    <string name="visa">Visa</string>
    <string name="mastercard">Mastercard</string>
    <string name="io_money">ЮMoney</string>
    <string name="qiwi">Qiwi</string>
    <string name="apple_pay">Apple Pay</string>
    <string name="other">Other</string>
    <string name="payme_description">%s дастури орқали тўлаш</string>
    <string name="click_description">%s дастури орқали тўлаш</string>
    <string name="robo_kassa_description">%s дастури орқали тўлаш</string>
    <string name="paypal_description">%s дастури орқали тўлаш</string>
    <string name="visa_description">%s дастури орқали тўлаш</string>
    <string name="mastercard_description">%s дастури орқали тўлаш</string>
    <string name="io_money_description">%s дастури орқали тўлаш</string>
    <string name="qiwi_description">%s дастури орқали тўлаш</string>
    <string name="apple_pay_description">%s дастури орқали тўлаш</string>
    <string name="other_description">%s дастури орқали тўлаш</string>
    <string name="amount_to_pay">Тўлов учун сумма</string>
    <string name="usd_x">USD (AҚШ) - $%s</string>
    <string name="rub_x">РУБЛЬ (РУ) - %s руб.</string>
    <string name="sum_x">СЎМ (ЎЗБ) - %s сўм</string>
    <string name="support_center">RoviTalk <b>CALL CENTER</b></string>
    <string name="call_center_number_x" translatable="false">tel:%s</string>
    <string name="call_center_number" translatable="false">+998971320066</string>
    <string name="soon">Тез кунда…</string>
    <string name="restore_purchase">Харидни тиклаш</string>
    <string name="restore_purchase_info">Агар сиз аввал РовиТалк сайтидан\nхаридни амалга оширган булсангиз\nва энди кандай уз сахифангизга\nкиришни билмаетган булсангиз\nманабу тугмани босинг</string>
    <string name="previous">Аввалгиси</string>
    <string name="pause">Тўхтатиш</string>
    <string name="play">Бошлаш</string>
    <string name="next">Кейингиси</string>
    <string name="x_minutes_left">%d дақиқа қолди</string>
    <string name="player_notification_channel_name">Аудио Плаер канали</string>
    <string name="player_notification_channel_description">Бу канал фақатгина мусиқий билдиришномани кўрсатиб туриш учун ишлатилади</string>
    <string name="unknown_album">Номаълум албўм</string>
    <string name="unknown_music">Номаълум қўшиқ</string>
    <string name="support_link">https://rovitalk.com</string>
    <string name="support_telegram_link">https://t.me/rovimaster</string>
    <string name="tap_again_to_exit">Дастурдан чиқиш учун яна бир марта босинг</string>
    <string name="audio_not_loaded_completely">Аудио охиригача юкланиб бўлмади</string>
    <string name="allow_camera_permission">Давом этиш учун камерага рухсат беришингиз керак</string>
    <string name="success_otp_sent">Код %s телефон рақамига юборилди</string>
    <string name="success_bought">Курсларга муваффаққиятли обуна бўлинди!</string>
    <string name="success_qr">QR муваффаққиятли активлаштирилди</string>
    <string name="exception_wrong_validation">Маълумотлар нотўғри киритилди, текшириб қайтадан уриниб кўринг</string>
    <string name="exception_too_many_attempts">Жуда кўп уриниш, бироздан сўнг қайтадан уриниб кўринг</string>
    <string name="section_item_image" translatable="false">Section item image</string>
    <string name="feed_podcast_image" translatable="false">Feed podcast image</string>
    <string name="audio_image" translatable="false">Audio image</string>
    <string name="close_image" translatable="false">Close image</string>
    <string name="image" translatable="false">Image</string>
    <string name="category_transition" translatable="false">Category transition</string>
</resources>