<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:cnb_backgroundColor="?colorPrimary"
        app:cnb_iconColor="?colorOnPrimary" />

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_bottom_search"
        android:title="@string/search"
        app:cnb_backgroundColor="?colorPrimary"
        app:cnb_iconColor="?colorOnPrimary" />

    <item
        android:id="@+id/section"
        android:icon="@drawable/ic_listen"
        android:title="@string/podcasts"
        app:cnb_backgroundColor="?colorPrimary"
        app:cnb_iconColor="?colorOnPrimary" />

    <item
        android:id="@+id/books"
        android:icon="@drawable/ic_my_books"
        android:title="@string/my_books"
        app:cnb_backgroundColor="?colorPrimary"
        app:cnb_iconColor="?colorOnPrimary" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        app:cnb_backgroundColor="?colorPrimary"
        app:cnb_iconColor="?colorOnPrimary" />
</menu>