<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="1000dp"
    android:paddingLeft="16dp"
    android:paddingTop="12dp"
    android:paddingRight="16dp"
    android:paddingBottom="12dp"
    tools:background="@drawable/bottom_dialog_background"
    tools:context=".ui.auth.RegisterDialog">

    <Button
        android:id="@+id/back"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:background="@drawable/contained_back_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textCancel"
        style="@style/CaptionSemiBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/cancel"
        android:textColor="@color/raven"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="8dp" />

    <TextView
        android:id="@+id/textAddReminder"
        style="@style/Headline5Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/register"
        app:layout_constraintLeft_toLeftOf="@id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@id/back" />

    <TextView
        android:id="@+id/textAddDailyReminders"
        style="?textAppearanceSubtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/create_page_in_rovi"
        app:layout_constraintLeft_toLeftOf="@id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@id/textAddReminder" />

    <!--        <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editableUsername"
                style="@style/ContainedEditText"
                android:layout_marginTop="24dp"
                android:hint="@string/username"
                android:inputType="textPersonName|textCapSentences"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textCreateRoviPage" />-->

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editableReminderTitle"
        style="@style/ContainedEditText"
        android:layout_marginTop="24dp"
        android:hint="@string/first_name"
        android:inputType="textPersonName|textCapSentences"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textAddDailyReminders" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editableReminderText"
        style="@style/ContainedEditText"
        android:hint="@string/last_name"
        android:inputType="textPersonName|textCapSentences"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editableReminderTitle" />

    <!--        <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editableEmail"
                style="@style/ContainedEditText"
                android:hint="@string/email"
                android:inputType="textWebEmailAddress"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editableLastName" />-->

    <!--<androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editablePassword"
        style="@style/ContainedEditText"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editableEmail" />-->

    <Button
        android:id="@+id/remind"
        style="@style/AccentContainedButton"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginRight="8dp"
        android:text="@string/register"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editableReminderText" />

    <CheckBox
        android:id="@+id/checkableTermsAndConditions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/accept_terms_and_conditions"
        android:textColor="@color/raven"
        app:layout_constraintTop_toBottomOf="@id/remind" />

    <TextView
        android:id="@+id/textIsRegistered"
        style="?textAppearanceCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/are_you_registered"
        android:textColor="?android:textColorPrimary"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintLeft_toLeftOf="@id/leftGuideline"
        app:layout_constraintRight_toLeftOf="@id/enter"
        app:layout_constraintTop_toBottomOf="@id/checkableTermsAndConditions" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/enter"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/enter"
        app:layout_constraintBottom_toBottomOf="@id/textIsRegistered"
        app:layout_constraintLeft_toRightOf="@id/textIsRegistered"
        app:layout_constraintRight_toRightOf="@id/rightGuideline"
        app:layout_constraintTop_toTopOf="@id/textIsRegistered" />

    <TextView
        android:id="@+id/textInstruction"
        style="?textAppearanceCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/video_instruction"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/leftGuideline"
        app:layout_constraintRight_toRightOf="@id/rightGuideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="8dp" />
</androidx.constraintlayout.widget.ConstraintLayout>