<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingTop="12dp"
    android:paddingRight="16dp"
    android:paddingBottom="12dp"
    tools:background="@drawable/bottom_dialog_background"
    tools:context=".ui.profile.settings.AddReminderDialog">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/back"
        android:layout_width="32dp"
        android:layout_height="32dp"
        app:srcCompat="@drawable/ic_arrow_back"
        android:background="?selectableItemBackground"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textCancel"
        style="@style/CaptionSemiBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/cancel"
        android:textColor="@color/raven"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="8dp" />

    <TextView
        android:id="@+id/textAddReminder"
        style="@style/Headline5Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/add_reminder"
        app:layout_constraintLeft_toLeftOf="@id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@id/back" />

    <TextView
        android:id="@+id/textAddDailyReminders"
        style="?textAppearanceSubtitle1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/add_daily_reminders_for_yourself"
        app:layout_constraintLeft_toLeftOf="@id/leftGuideline"
        app:layout_constraintRight_toRightOf="@id/rightGuideline"
        app:layout_constraintTop_toBottomOf="@id/textAddReminder" />

    <!--        <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editableUsername"
                style="@style/ContainedEditText"
                android:layout_marginTop="24dp"
                android:hint="@string/username"
                android:inputType="textPersonName|textCapSentences"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textCreateRoviPage" />-->

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editableReminderTitle"
        style="@style/ContainedEditText"
        android:layout_marginTop="24dp"
        android:hint="@string/reminder_title"
        android:inputType="textPersonName|textCapSentences"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textAddDailyReminders" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editableReminderText"
        style="@style/ContainedEditText"
        android:gravity="top"
        android:hint="@string/reminder_text"
        android:inputType="textCapSentences|textMultiLine"
        android:minLines="6"
        android:scrollbars="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editableReminderTitle" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/remindTime"
        style="@style/ContainedEditText"
        android:layout_marginTop="24dp"
        android:clickable="true"
        android:focusable="false"
        android:hint="@string/remind_time"
        android:inputType="textPersonName|textCapSentences"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editableReminderText"
        tools:ignore="KeyboardInaccessibleWidget" />

    <!--        <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editableEmail"
                style="@style/ContainedEditText"
                android:hint="@string/email"
                android:inputType="textWebEmailAddress"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editableLastName" />-->

    <!--<androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editablePassword"
        style="@style/ContainedEditText"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editableEmail" />-->

    <Button
        android:id="@+id/remind"
        style="@style/AccentContainedButton"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginRight="8dp"
        android:text="@string/remind"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/remindTime" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="8dp" />
</androidx.constraintlayout.widget.ConstraintLayout>