<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/item_feed_section"
    android:clickable="true"
    android:focusable="true">

    <uz.invan.rovitalk.ui.feed.section.SquareImageView
        android:id="@+id/imageSectionItem"
        android:transitionName="@string/category_transition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/section_item_image"
        android:focusable="true"
        android:foreground="@drawable/transparent_ripple_background"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:layout_width="wrap_content"
        android:clickable="false"
        android:text="@string/free"
        android:id="@+id/free"
        style="@style/CaptionSemiBold"
        app:layout_constraintTop_toTopOf="@id/imageSectionItem"
        app:layout_constraintRight_toRightOf="@id/imageSectionItem"
        android:layout_margin="8dp"
        android:textColor="@color/white"
        android:focusable="false"
        android:visibility="gone"
        android:background="@drawable/background_contained_rounded_primary_16"
        android:layout_height="24dp" />

    <ImageView
        android:contentDescription="@string/audio_image"
        android:visibility="gone"
        android:layout_margin="8dp"
        app:layout_constraintTop_toTopOf="@id/imageSectionItem"
        app:layout_constraintRight_toRightOf="@id/imageSectionItem"
        android:padding="4dp"
        android:background="@drawable/circle_background_primary"
        android:src="@drawable/ic_baseline_lock_24"
        android:layout_width="24dp"
        android:id="@+id/lock"
        android:layout_height="24dp" />

    <TextView
        android:id="@+id/textSectionItemTitle"
        style="@style/CaptionSemiBold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_inner_space"
        android:textColor="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/imageSectionItem" />

    <TextView
        android:id="@+id/textSectionName"
        style="?textAppearanceCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAllCaps="true"
        android:maxLines="1"
        android:ellipsize="end"
        android:textColor="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textSectionItemTitle" />

    <TextView
        android:id="@+id/textSectionItemLength"
        style="?textAppearanceCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textSectionName" />
</androidx.constraintlayout.widget.ConstraintLayout>